--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,8 +10,8 @@
     <FrameLayout
         android:id="@+id/fragmentindhold"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true" />
 
 
 </RelativeLayout>
