--- a/app/src/main/res/layout/fragment_highscore_view.xml
+++ b/app/src/main/res/layout/fragment_highscore_view.xml
@@ -4,10 +4,33 @@
     android:layout_height="match_parent"
     tools:context="jepsen.dk.galgeleg_fragm.highscore_view">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/highscore_view"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_column="0">
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="8"
+            android:name="jepsen.dk.galgeleg_fragm.highscore_frag"
+            android:id="@+id/fragment"
+            android:layout_gravity="center_horizontal"
+            tools:layout="@layout/fragment_highscore_frag" />
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="2"
+            android:name="jepsen.dk.galgeleg_fragm.Spil_igen"
+            android:id="@+id/fragment3"
+            android:layout_gravity="center_horizontal"
+            tools:layout="@layout/fragment_spil_igen"
+            />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
