--- a/app/src/main/res/layout/afsluttetspil_frag.xml
+++ b/app/src/main/res/layout/afsluttetspil_frag.xml
@@ -7,47 +7,66 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="dk.jepsen.Galgeleh_frag.afsluttetspil">
 
+    <LinearLayout
+        android:id="@+id/afsluttet"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_column="0">
+
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/ord"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="50dp"
+        android:textSize="45dp"
         android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/ordetVar"
+            android:layout_above="@+id/ord2"
+            android:textSize="30dp"
+            android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/ord2"
+        android:id="@+id/ord3"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textSize="50dp"/>
+        android:textSize="30dp"/>
 
-    <Button
+
+        <Button
         android:layout_width="200dp"
-        android:layout_height="80dp"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:text="Prøv igen!"
         android:id="@+id/againButton"
         android:layout_alignParentBottom="true"
         android:textSize="25dp"
         android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/ordetVar"
-        android:layout_above="@+id/ord2"
-        android:textSize="25dp"
-        android:layout_centerHorizontal="true" />
+
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:id="@+id/highscoreButton"
         android:layout_above="@+id/againButton"
         android:layout_centerHorizontal="true" />
+
+    </LinearLayout>
+
+
 </RelativeLayout>
