--- a/app/src/main/res/layout/fragment_highscore_view_temp.xml
+++ b/app/src/main/res/layout/fragment_highscore_view_temp.xml
@@ -2,34 +2,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jepsen.dk.galgeleg_fragm.highscore_view">
+    tools:context="jepsen.dk.galgeleg_fragm.highscore_viewTemp">
+
 
     <LinearLayout
-        android:id="@+id/highscore_view"
+        android:id="@+id/highscore_view_temp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_column="0">
 
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="8"
-            android:name="jepsen.dk.galgeleg_fragm.highscore_frag"
-            android:id="@+id/fragment"
-            android:layout_gravity="center_horizontal"
-            tools:layout="@layout/fragment_highscore_frag" />
 
         <fragment
+            android:layout_height="0px"
+            android:layout_weight="8"
             android:layout_width="match_parent"
+            android:name="jepsen.dk.galgeleg_fragm.highscore_temp"
+            android:id="@+id/fragment4"
+            android:layout_gravity="center_horizontal"
+            tools:layout="@layout/fragment_highscore_temp"/>
+
+        <fragment
             android:layout_height="0px"
             android:layout_weight="2"
+            android:layout_width="match_parent"
             android:name="jepsen.dk.galgeleg_fragm.Spil_igen"
             android:id="@+id/fragment3"
             android:layout_gravity="center_horizontal"
             tools:layout="@layout/fragment_spil_igen"/>
-
-
     </LinearLayout>
+
 
 </RelativeLayout>
