--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,14 +4,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
-    tools:context=".MainActivityFragment">
+    tools:context=".MainActivityFragment"
+    android:background="@color/accent_color"
+    >
+
 
 
     <FrameLayout
         android:id="@+id/fragmentindhold"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        />
 
 
 </RelativeLayout>
