--- a/app/src/main/res/layout/fragment_svaerhedsgrad.xml
+++ b/app/src/main/res/layout/fragment_svaerhedsgrad.xml
@@ -2,12 +2,63 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="jepsen.dk.galgeleg_fragm.Svaerhedsgrad">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/difView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:choiceMode="singleChoice" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sværhedsgrad"
+            android:id="@+id/textView"
+            android:layout_gravity="center_horizontal"
+            android:textSize="40dp"
+            android:fontFamily="sans-serif-medium"
+            android:padding="16dp"
+            />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="224dp"
+                android:layout_height="112dp"
+                android:id="@+id/knapLet"
+                android:text="Let"
+                android:textSize="32dp"
+                android:fontFamily="sans-serif-medium"
+                android:elevation="2dp"
+                android:layout_marginBottom="16dp"
+                />
+
+            <Button
+                android:layout_width="224dp"
+                android:layout_height="112dp"
+                android:id="@+id/knapMedium"
+                android:text="Medium"
+                android:textSize="32dp"
+                android:fontFamily="sans-serif-medium"
+                android:elevation="2dp"
+                android:layout_marginBottom="16dp"
+                />
+
+            <Button
+                android:layout_width="224dp"
+                android:layout_height="112dp"
+                android:id="@+id/knapSvaer"
+                android:text="Svær"
+                android:textSize="32dp"
+                android:fontFamily="sans-serif-medium"
+                android:elevation="2dp"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
