--- a/app/src/main/res/layout/velkomst_frag.xml
+++ b/app/src/main/res/layout/velkomst_frag.xml
@@ -8,39 +8,67 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Velkomst_akt">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/galgeImageView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/galge" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Galgeleg"
-        android:id="@+id/galgeTextView"
-        android:textSize="70dp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:id="@+id/velkomst"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_column="0">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:text="Start"
-        android:id="@+id/startButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Galgeleg"
+            android:id="@+id/galgeTextView"
+            android:textSize="50dp"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Sværhedsgrad"
-        android:id="@+id/difButton"
-        android:layout_above="@+id/startButton"
-        android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="4"
+            android:id="@+id/galgeImageView"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/galge" />
+
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:text="Start"
+            android:id="@+id/startButton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:text="Sværhedsgrad"
+            android:id="@+id/difButton"
+            android:layout_above="@+id/startButton"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:text="Se highscore"
+            android:id="@+id/HSbutton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
+            
