--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
     tools:context=".MainActivityFragment"
-    android:background="@color/accent_color"
+    android:background="@color/primary_color"
     >
 
 
