--- a/app/src/main/res/layout/fragment_highscore_frag.xml
+++ b/app/src/main/res/layout/fragment_highscore_frag.xml
@@ -2,7 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jepsen.dk.galgeleg_fragm.highscore_frag">
+    tools:context="jepsen.dk.galgeleg_fragm.highscore_frag"
+    android:background="@color/primary_color">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Highscore"
+        android:id="@+id/highscortTitel"
+        android:gravity="center"
+        android:textSize="40dp"
+        android:fontFamily="sans-serif-medium"
+        android:padding="16dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
