--- a/app/src/main/res/layout/side2_frag.xml
+++ b/app/src/main/res/layout/side2_frag.xml
@@ -5,7 +5,8 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="dk.jon.lektion2_galgeleg.side2_akt">
+        tools:context="dk.jon.lektion2_galgeleg.side2_akt"
+        android:background="@color/primary_color">
 
         <ImageView
             android:layout_width="wrap_content"
