--- a/app/src/main/res/layout/fragment_highscore_frag.xml
+++ b/app/src/main/res/layout/fragment_highscore_frag.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jepsen.dk.galgeleg_fragm.highscore_frag"
-    android:background="@color/primary_color">
+    tools:context="jepsen.dk.galgeleg_fragm.highscore_frag">
 
     <TextView
         android:layout_width="wrap_content"
