--- a/app/src/main/res/layout/fragment_svaerhedsgrad.xml
+++ b/app/src/main/res/layout/fragment_svaerhedsgrad.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jepsen.dk.galgeleg_fragm.Svaerhedsgrad"
-    android:background="@color/primary_color">
+    tools:context="jepsen.dk.galgeleg_fragm.Svaerhedsgrad">
 
     <LinearLayout
         android:orientation="vertical"
