--- a/app/src/main/res/layout/fragment_name_frag.xml
+++ b/app/src/main/res/layout/fragment_name_frag.xml
@@ -6,6 +6,7 @@
 
 
     <EditText
+        android:selectAllOnFocus="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
