--- a/app/src/main/res/layout/fragment_svaerhedsgrad.xml
+++ b/app/src/main/res/layout/fragment_svaerhedsgrad.xml
@@ -15,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sværhedsgrad"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal"
             android:textSize="40dp"
@@ -37,7 +38,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
                 android:layout_marginBottom="16dp"
-                android:background="@color/accent_color"
+                android:background="@drawable/knap_blaa_bg"
                 />
 
             <Button
@@ -49,7 +50,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
                 android:layout_marginBottom="16dp"
-                android:background="@color/accent_color"
+                android:background="@drawable/knap_blaa_bg"
                 />
 
             <Button
@@ -60,7 +61,7 @@
                 android:textSize="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
-                android:background="@color/accent_color"
+                android:background="@drawable/knap_blaa_bg"
                 />
         </LinearLayout>
 
