--- a/app/src/main/res/layout/fragment_highscore_temp.xml
+++ b/app/src/main/res/layout/fragment_highscore_temp.xml
@@ -9,27 +9,17 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
 
         <ListView
             android:layout_width="0px"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:id="@+id/tempHighViewLeft"
+            android:id="@+id/highViewLeft"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:choiceMode="singleChoice" />
-
-        <ListView
-            android:layout_width="0px"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:id="@+id/tempHighViewRight"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:choiceMode="singleChoice" />
-
 
     </LinearLayout>
 </TableLayout>
