--- a/app/src/main/res/layout/listview_egetlayout.xml
+++ b/app/src/main/res/layout/listview_egetlayout.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         />
 
 </LinearLayout>
