--- a/app/src/main/res/layout/side2_frag.xml
+++ b/app/src/main/res/layout/side2_frag.xml
@@ -29,54 +29,362 @@
             android:layout_below="@+id/mainImgImageView"
             android:layout_centerHorizontal="true" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bogstavEditText"
-            android:hint="Indtast et bogstav"
-            android:textSize="25dp"
-            android:layout_below="@+id/ordTextView"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:layout_centerHorizontal="true"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/tidligereGætTextView"
-            android:layout_below="@+id/bogstavEditText"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="Tidligere gæt: " />
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true">
-
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:text="Gæt!"
-                android:id="@+id/gætButton"
-                android:layout_gravity="center_horizontal"
-                android:textSize="32dp"
-                />
-        </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/tidligereGætTextView2"
-        android:layout_below="@+id/bogstavEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:text="" />
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginBottom="16dp"
+        android:weightSum="5"
+
+        >
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0px"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:padding="0dp"
+            >
+
+
+        <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="A"
+                android:id="@+id/A"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="B"
+                android:id="@+id/B"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="C"
+                android:id="@+id/C"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="D"
+                android:id="@+id/D"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="E"
+                android:id="@+id/E"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="F"
+                android:id="@+id/F"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="0px"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:padding="0dp">
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="G"
+                android:id="@+id/G"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="H"
+                android:id="@+id/H"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="I"
+                android:id="@+id/I"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="J"
+                android:id="@+id/J"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="K"
+                android:id="@+id/K"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="L"
+                android:id="@+id/L"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0px"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:padding="0dp">
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="M"
+                android:id="@+id/M"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="N"
+                android:id="@+id/N"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="O"
+                android:id="@+id/O"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="P"
+                android:id="@+id/P"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Q"
+                android:id="@+id/Q"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="R"
+                android:id="@+id/R"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0px"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:padding="0dp">
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="S"
+                android:id="@+id/S"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="T"
+                android:id="@+id/T"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="U"
+                android:id="@+id/U"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="V"
+                android:id="@+id/V"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="W"
+                android:id="@+id/W"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="X"
+                android:id="@+id/X"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0px"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:padding="0dp"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="22dp"
+            >
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Y"
+                android:id="@+id/Y"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"></Button>
+
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Z"
+                android:id="@+id/Z"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Æ"
+                android:id="@+id/Æ"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Ø"
+                android:id="@+id/Ø"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+            <Button
+                android:layout_width="0px"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Å"
+                android:id="@+id/Å"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15dp"
+                />
+
+            </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
 
