Div. layout mht nye knapper

--- a/app/src/main/res/layout/side2_frag.xml
+++ b/app/src/main/res/layout/side2_frag.xml
@@ -64,17 +64,21 @@
         <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
                 android:text="A"
                 android:id="@+id/A"
+                android:layout_marginRight="2dp"
                 android:layout_gravity="center_horizontal"
                 android:textSize="15dp"
                 />
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
                 android:text="B"
+                android:layout_marginRight="2dp"
                 android:id="@+id/B"
                 android:layout_gravity="center_horizontal"
                 android:textSize="15dp"
@@ -82,7 +86,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="C"
                 android:id="@+id/C"
                 android:layout_gravity="center_horizontal"
@@ -91,7 +97,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="D"
                 android:id="@+id/D"
                 android:layout_gravity="center_horizontal"
@@ -101,7 +109,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="E"
                 android:id="@+id/E"
                 android:layout_gravity="center_horizontal"
@@ -112,7 +122,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="F"
                 android:id="@+id/F"
                 android:layout_gravity="center_horizontal"
@@ -133,7 +145,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="G"
                 android:id="@+id/G"
                 android:layout_gravity="center_horizontal"
@@ -142,7 +156,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="H"
                 android:id="@+id/H"
                 android:layout_gravity="center_horizontal"
@@ -152,7 +168,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="I"
                 android:id="@+id/I"
                 android:layout_gravity="center_horizontal"
@@ -161,7 +179,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="J"
                 android:id="@+id/J"
                 android:layout_gravity="center_horizontal"
@@ -171,7 +191,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="K"
                 android:id="@+id/K"
                 android:layout_gravity="center_horizontal"
@@ -180,7 +202,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="L"
                 android:id="@+id/L"
                 android:layout_gravity="center_horizontal"
@@ -201,7 +225,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="M"
                 android:id="@+id/M"
                 android:layout_gravity="center_horizontal"
@@ -211,7 +237,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="N"
                 android:id="@+id/N"
                 android:layout_gravity="center_horizontal"
@@ -220,7 +248,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="O"
                 android:id="@+id/O"
                 android:layout_gravity="center_horizontal"
@@ -229,7 +259,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="P"
                 android:id="@+id/P"
                 android:layout_gravity="center_horizontal"
@@ -238,7 +270,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Q"
                 android:id="@+id/Q"
                 android:layout_gravity="center_horizontal"
@@ -247,7 +281,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="R"
                 android:id="@+id/R"
                 android:layout_gravity="center_horizontal"
@@ -268,7 +304,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="S"
                 android:id="@+id/S"
                 android:layout_gravity="center_horizontal"
@@ -277,7 +315,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="T"
                 android:id="@+id/T"
                 android:layout_gravity="center_horizontal"
@@ -287,7 +327,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="U"
                 android:id="@+id/U"
                 android:layout_gravity="center_horizontal"
@@ -296,7 +338,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="V"
                 android:id="@+id/V"
                 android:layout_gravity="center_horizontal"
@@ -305,7 +349,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="W"
                 android:id="@+id/W"
                 android:layout_gravity="center_horizontal"
@@ -315,7 +361,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="X"
                 android:id="@+id/X"
                 android:layout_gravity="center_horizontal"
@@ -339,7 +387,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Y"
                 android:id="@+id/Y"
                 android:layout_gravity="center_horizontal"
@@ -348,7 +398,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Z"
                 android:id="@+id/Z"
                 android:layout_gravity="center_horizontal"
@@ -357,7 +409,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Æ"
                 android:id="@+id/Æ"
                 android:layout_gravity="center_horizontal"
@@ -366,7 +420,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Ø"
                 android:id="@+id/Ø"
                 android:layout_gravity="center_horizontal"
@@ -375,7 +431,9 @@
             <Button
                 android:layout_width="0px"
                 android:layout_weight="1"
+                android:background="@drawable/knap_blaa_bg"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
                 android:text="Å"
                 android:id="@+id/Å"
                 android:layout_gravity="center_horizontal"
