--- a/app/src/main/res/layout/fragment_highscore_frag.xml
+++ b/app/src/main/res/layout/fragment_highscore_frag.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="Highscore"
         android:id="@+id/highscortTitel"
         android:gravity="center"
